<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:text="@string/you_finished_test_your_score"
            android:id="@+id/score_header"
            android:paddingTop="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:textSize="20sp"/>
    <TextView
            android:text="@string/percentageScore"
            android:id="@+id/percentageScore" android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="30sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main_menu"
            android:id="@+id/backButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" android:textSize="23dp"/>


</LinearLayout>