<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ScrlView" android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/select_training"
                android:id="@+id/textView2" android:layout_row="0" android:layout_column="1" android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" android:textSize="30dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:weightSum="1"
                android:baselineAligned="false">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="0.50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/predicting"
                        android:id="@+id/predicting"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp" android:layout_marginBottom="10dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="easy"
                        android:id="@+id/predict_easy" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="medium"
                        android:id="@+id/predict_medium" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="hard"
                        android:id="@+id/predict_hard" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="0.50">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/guessing"
                        android:id="@+id/guessing"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp" android:layout_marginBottom="10dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="easy"
                        android:id="@+id/guess_easy" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="medium"
                        android:id="@+id/guess_medium" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="hard"
                        android:id="@+id/guess_hard" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" android:layout_marginRight="20dp" android:layout_marginLeft="20dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>